--- a/style.css
+++ b/style.css
@@ -14,16 +14,18 @@ body {
 }
 
 
-.tittle-text {
+.main-text {
     text-align: center;
   }
   
+
   nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
   
+
   nav ul {
     list-style: none;
     display: flex;
@@ -31,5 +33,123 @@ body {
     align-items: center;
   }
   
+  
+  .selector {
+    text-transform: uppercase;
+    padding: 10px;
+    font-weight: bold;
+    gap: 5px;
+  }
+
+  .btn-selector {
+    border-radius: 5px;
+    padding: 3px;
+    text-decoration: none;
+    color: #000;
+  }
 
 
+  .btn-selector:hover{
+    background-color: black;
+    color: white;
+  }
+
+
+  .nav-floating {
+    opacity: 0;
+    transition: .3s;
+  }
+
+  .nav-floating:hover {
+      opacity: 1;
+  }
+
+  .nav-floating ul {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    font-weight: bolder;
+    line-height: 1.6;
+    font-size: x-large;
+  }
+
+
+  .nav-floating a {
+    color: black;
+    text-decoration: none;
+  }
+
+
+  .search-for {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+  }
+
+  .search-for img {
+    width: 25px;
+    height: 25px;
+  }
+
+
+  .search-for input {
+    margin-left: 5px;
+  }
+
+
+  .icons {
+    padding-top: 20px;
+    display: flex;
+    gap: 5px;
+  }
+
+
+  .principal-container ul{
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    gap: 20px;
+  }
+
+  .principal-container img {
+    width: 100%;
+    height: 100%;
+  }
+
+
+
+  .newsletter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 450px;
+  gap: 30px;
+  }
+
+
+
+  #emailAddress {
+    text-align: center;
+    width: 400px;
+    border: none;
+    border-bottom:1px solid black;
+  }
+
+
+  .list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .list a {
+    text-decoration: none;
+    color: black;
+  }
+  
